--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu Tienda</title>
+    <title>𝙽𝚊𝚁𝚒𝚟 𝚂𝚝𝚘𝚛𝚎</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -69,19 +69,25 @@
 <body>
 
 <header>
-    <h1>Aquí va tu logo o el nombre de tu tienda</h1>
+    <h1>𝙽𝚊𝚁𝚒𝚟 𝚂𝚝𝚘𝚛𝚎</h1>
 </header>
 
 <main class="product-grid">
-    <!-- Copiá y pegá este bloque para agregar productos -->
-    <!--
-    <div class="product">
-        <img src="img/tu-imagen.jpg" alt="Nombre del producto">
-        <h2>Nombre del Producto</h2>
-        <p>$Precio</p>
-        <a class="buy-button" href="https://wa.me/XXXXXXXXXXX?text=Hola,%20estoy%20interesado/a%20en%20este%20producto.%20¿Tenés%20stock%20disponible?%20Quisiera%20que%20me%20lo%20envíen%20por%20Correo%20Argentino%20o%20Andreani.%20¡Gracias!">Comprar por WhatsApp</a>
-    </div>
-    -->
+
+       <div class="product">
+            <img src="remera-oversize-basica-negra.jpg" alt="Remera Oversize Negra">
+            <h2>Remera Oversize Negra</h2>
+            <p>$9.000</p>
+            <a class="buy-button" href="https://wa.me/5491138893335?text=Hola,%20estoy%20interesado/a%20en%20este%20producto.%20¿Tenés%20stock%20disponible?%20Quisiera%20que%20me%20lo%20envíen%20por%20Correo%20Argentino%20o%20Andreani.%20¡Gracias!">Comprar por WhatsApp</a>
+       </div>
+    
+
+       <div class="product">
+        <img src="remera-oversize-basica-negra.jpg" alt="Remera Oversize Negra">
+        <h2>Remera Oversize Negra</h2>
+        <p>$9.000</p>
+        <a class="buy-button" href="https://wa.me/5491138893335?text=Hola,%20estoy%20interesado/a%20en%20este%20producto.%20¿Tenés%20stock%20disponible?%20Quisiera%20que%20me%20lo%20envíen%20por%20Correo%20Argentino%20o%20Andreani.%20¡Gracias!">Comprar por WhatsApp</a>
+   </div>
 </main>
 
 <footer>
